Sat Nov 13 11:50:31 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Index the leafname of the file (without any extension) as
	  if it contained additional keywords.

Sat Nov 13 11:32:09 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: If a filter command isn't installed, flag this in the
	  commands map so we don't try running this command again for any
	  file with the same mimetype (previously we'd rerun it for a different
	  extension which gave the same mimetype).

Fri Nov 12 09:11:35 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Add -no-undefined to AM_LDFLAGS on
	  platforms which need it to dynamically link such as cygwin (need
	  to do this taken from ticket#282).

Fri Nov 12 03:35:56 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Report MIME type if it's unknown to us.  Remove debug
	  output line.  Update comments.

Fri Nov 12 03:32:27 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc: Report errors from libmagic.

Fri Nov 12 02:58:20 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc,diritor.h: Fix to compile when libmagic is detected.

Fri Nov 12 01:40:24 GMT 2010  Olly Betts <olly@survex.com>

	* diritor.cc: Add missing class qualifier to method definition.

Fri Nov 12 01:25:11 GMT 2010  Olly Betts <olly@survex.com>

	* INSTALL: Mention libmagic in install instructions.

Fri Nov 12 01:16:21 GMT 2010  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac,diritor.cc,diritor.h,omindex.cc: Optionally
	  use libmagic to detect MIME types for files for which we have no
	  extension mapping, which allows us to handle files with a misleading
	  extension, and files with no extension.  (ticket#114)

Thu Nov 11 23:23:07 GMT 2010  Olly Betts <olly@survex.com>

	* omindex.cc: Refactor slightly to handle the unknown extension case
	  up front, so we lose an indentation level for the known extension
	  case.

Thu Nov 11 12:25:03 GMT 2010  Olly Betts <olly@survex.com>
